--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="google-site-verification" content="Kj1ZnosnGFbuO4xJEIrlyv6pVvYTdg7pUnMXG9S_Ks0" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>How to Find the Best Audiology Clinic in Dallas: Your Expert Guide</title>
@@ -360,11 +359,11 @@ padding-bottom: 0px !important;
 
 <!-- Navbar -->
 <nav class="navbar-expand-lg navbar">
-<a class="navbar-brand" href="#"  ><img alt="Trinity Hearing Logo" src="https://i.postimg.cc/hG5p7s9f/download.png"  width="150px" ></a>
+<a class="navbar-brand" href="https://trinityhearingdallas.pages.dev"  ><img alt="Trinity Hearing Logo" src="https://i.postimg.cc/hG5p7s9f/download.png"  width="150px" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon  fa fa-bars"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
 <ul class="navbar-nav d-flex align-items-center ml-auto"><li class="nav-item">
-<a class="nav-link y8cd3f5746abf1c70106a855b2cd42ca7" href="#" >Home</a>
+<a class="nav-link y8cd3f5746abf1c70106a855b2cd42ca7" href="https://trinityhearingdallas.pages.dev" >Home</a>
 </li>
 <li class="nav-item">
 <a class="nav-link y8cd3f5746abf1c70106a855b2cd42ca7" href="https://www.trinityhearing.com/services/" >Our Services</a>
