--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="Kj1ZnosnGFbuO4xJEIrlyv6pVvYTdg7pUnMXG9S_Ks0" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>How to Find the Best Audiology Clinic in Dallas: Your Expert Guide</title>
